--- a/foundry.toml
+++ b/foundry.toml
@@ -1,6 +1,22 @@
 [profile.default]
 src = "src"
 out = "out"
+solc_version = "0.8.20"
 libs = ["lib"]
+remappings = ['@chainlink/contracts/=lib/chainlink-brownie-contracts/contracts/', '@openzeppelin/contracts=lib/openzeppelin-contracts/contracts']
 
-# See more config options https://github.com/foundry-rs/foundry/blob/master/crates/config/README.md#all-options
+[etherscan]
+mainnet = { key = "${ETHERSCAN_API_KEY}" }
+sepolia = {key = "${ETHERSCAN_API_KEY}"}
+
+[rpc_endpoints]
+sepolia = "${SEPOLIA_RPC_URL}"
+
+[invariant]
+runs = 128
+depth = 128
+fail_on_revert = true
+
+
+
+# See more config options https://github.com/foundry-rs/foundry/tree/master/config
