init setup for makeing contract upgradeable

--- a/foundry.toml
+++ b/foundry.toml
@@ -4,7 +4,8 @@ out = "out"
 solc_version = "0.8.20"
 libs = ["lib"]
 remappings = ['@chainlink/contracts/=lib/chainlink-brownie-contracts/contracts/', 
-              '@openzeppelin/contracts=lib/openzeppelin-contracts/contracts']
+              '@openzeppelin/contracts=lib/openzeppelin-contracts/contracts',
+              '@openzeppelin/contracts-upgradeable=lib/openzeppelin-contracts-upgradeable/contracts',]
 
 gas_reports = ["EquilibriumCore"]
 # gas_reports_ignore = ["InstanceEquilibriumCore"]
