making EquilibriumCore to upgradeable contract splitted into another contract called EquilibriumCoreUpgradeable which own UUPS upgradeable desgin pattern, also the relevant script due to upgrading has been added, no test case added for this new contract because it has same implementation with EquilibriumCore contract

--- a/foundry.toml
+++ b/foundry.toml
@@ -25,4 +25,7 @@ fail_on_revert = true
 
 fs_permissions = [{ access = "read-write", path = "./deployed_addresses.txt"}]
 
+# IMPORTANT: should be false in production.
+ffi = true
+
 # See more config options https://github.com/foundry-rs/foundry/tree/master/config
